[gd_scene load_steps=19 format=2]

[ext_resource path="res://art/hair.png" type="Texture" id=1]
[ext_resource path="res://art/hand.png" type="Texture" id=2]
[ext_resource path="res://art/body.png" type="Texture" id=3]
[ext_resource path="res://characters/human3.gd" type="Script" id=4]
[ext_resource path="res://misc/sense3.tscn" type="PackedScene" id=5]
[ext_resource path="res://misc/charactersattack.tres" type="Animation" id=6]
[ext_resource path="res://art/polo.png" type="Texture" id=7]
[ext_resource path="res://art/polokar.png" type="Texture" id=8]
[ext_resource path="res://art/arnyek.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.29538
height = 5.50544

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.61799, 10.2315 )

[sub_resource type="Animation" id=3]
resource_name = "attack2"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("test/kez2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2.60651, 2.78109 ), Vector2( -0.307002, -16.9514 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("test/kez2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -120.0, -225.0, -210.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("test/kez:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1.23474, 7.02194 ), Vector2( 6.9776, -11.5681 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("test/kez:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 30.0, -59.9999, -45.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("test/Area2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("test/Area2D:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("test/kez2/Position2D:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 52.0, 34.7 ]
}

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("sense/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("test/Area2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, false ]
}

[sub_resource type="Animation" id=6]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("test/kez:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3.44326, -12.4487 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("test/kez:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -60.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("test/Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=7]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("test/kez2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4.71207, -13.265 ), Vector2( -0.307002, -16.9514 ), Vector2( 5.1292, -2.98023e-07 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("test/kez2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -180.0, -210.0, -138.675 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("test/kez:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5.05748, 7.30383 ), Vector2( 4.50272, -9.53516 ), Vector2( 4.97405, 0.796481 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("test/kez:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -45.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("test/kez2/Position2D:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.75
height = 33.25

[sub_resource type="CircleShape2D" id=9]
radius = 183.266

[node name="human" type="KinematicBody2D" groups=[
"adventurer",
]]
z_index = 5
collision_layer = 5
collision_mask = 5
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.23744, 8 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="bars" type="Sprite" parent="."]
position = Vector2( -0.297302, -16 )
z_index = 5
__meta__ = {
"_edit_group_": true
}

[node name="hpbar" type="ColorRect" parent="bars"]
margin_left = -14.0178
margin_top = -29.2105
margin_right = 13.9822
margin_bottom = -28.2105
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.964706, 0.0470588, 0.0470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rbar" type="ColorRect" parent="bars/hpbar"]
visible = false
margin_left = 1.05025
margin_top = 1.93934
margin_right = 26.0503
margin_bottom = 2.93934
color = Color( 0.258824, 0.968627, 0.00392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stamtimer" type="Timer" parent="bars/hpbar"]
wait_time = 0.5

[node name="shieldbar" type="ColorRect" parent="bars"]
margin_left = -14.0
margin_top = -29.0
margin_right = -2.0
margin_bottom = -28.0
color = Color( 0, 1, 0.811765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test" type="Sprite" parent="."]
position = Vector2( 0, -16 )
z_index = 5
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="ruha" type="Sprite" parent="test"]
texture = ExtResource( 7 )

[node name="haj" type="Sprite" parent="test"]
texture = ExtResource( 1 )

[node name="kez" type="Sprite" parent="test"]
position = Vector2( -1.23474, 7.02194 )
rotation = 0.523599
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="test/kez"]
modulate = Color( 0.654902, 0.654902, 0.654902, 1 )
texture = ExtResource( 8 )

[node name="ruhahely" type="Sprite" parent="test"]

[node name="kez2" type="Sprite" parent="test"]
position = Vector2( 2.60651, 2.78109 )
rotation = -2.0944
scale = Vector2( -1, 1 )
texture = ExtResource( 2 )

[node name="Position2D" type="Position2D" parent="test/kez2"]
position = Vector2( -22.673, -9.072 )
rotation = 0.907571

[node name="Sprite" type="Sprite" parent="test/kez2"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
texture = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="test"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="test/Area2D"]
position = Vector2( -20.0208, -2.21763 )
shape = SubResource( 2 )

[node name="arnyek" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = ExtResource( 6 )
anims/attack2 = SubResource( 3 )
anims/reset = SubResource( 4 )
anims/resetattack = SubResource( 5 )
anims/run = SubResource( 6 )
anims/shooting = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="hitbox" type="Area2D" parent="." groups=[
"hurtbox",
]]
collision_layer = 20
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -3.23744, -16 )
shape = SubResource( 8 )

[node name="sense" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="sense"]
position = Vector2( -0.297302, 0 )
shape = SubResource( 9 )
disabled = true

[node name="sense3" parent="." instance=ExtResource( 5 )]
visible = false
collision_layer = 0
collision_mask = 0

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="resettimer" type="Timer" parent="."]
wait_time = 1.5
[connection signal="timeout" from="bars/hpbar/stamtimer" to="." method="_on_stamtimer_timeout"]
[connection signal="area_entered" from="test/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="test/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="sense" to="." method="_on_sense_body_entered"]
[connection signal="body_exited" from="sense" to="." method="_on_sense_body_exited"]
[connection signal="body_entered" from="sense3" to="." method="_on_sense3_body_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="resettimer" to="." method="_on_resettimer_timeout"]
