[gd_scene load_steps=13 format=2]

[ext_resource path="res://art/hair.png" type="Texture" id=1]
[ext_resource path="res://art/hand.png" type="Texture" id=2]
[ext_resource path="res://art/body.png" type="Texture" id=3]
[ext_resource path="res://characters/human3.gd" type="Script" id=4]
[ext_resource path="res://misc/charactersattack.tres" type="Animation" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.29538
height = 5.50544

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.34975, 5.50712 )

[sub_resource type="Animation" id=3]
resource_name = "reset"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("sense/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("test/kez:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3.44326, -12.4487 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("test/kez:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -60.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("test/kez2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -7.45838, -8.71325 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("test/kez2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 45.0 ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 7.75
height = 33.25

[sub_resource type="CircleShape2D" id=6]
radius = 183.266

[sub_resource type="CapsuleShape2D" id=7]
radius = 1.92856
height = 1.1264

[node name="human" type="KinematicBody2D"]
collision_layer = 9
collision_mask = 9
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.911594, 20.7975 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="test" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="haj" type="Sprite" parent="test"]
texture = ExtResource( 1 )

[node name="kez" type="Sprite" parent="test"]
position = Vector2( -2.38379, 4.37029 )
rotation = 0.523599
texture = ExtResource( 2 )

[node name="kez2" type="Sprite" parent="test"]
position = Vector2( 2.60651, 2.78109 )
rotation = -2.0944
scale = Vector2( -1, 1 )
texture = ExtResource( 2 )

[node name="Position2D" type="Position2D" parent="test/kez2"]
position = Vector2( -25.4228, -6.65845 )
rotation = 0.682424

[node name="Area2D" type="Area2D" parent="test"]
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="test/Area2D"]
position = Vector2( -18.1354, -9.21636 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = ExtResource( 6 )
anims/reset = SubResource( 3 )
anims/run = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="hitbox" type="Area2D" parent="." groups=[
"hurtbox",
]]
collision_layer = 24
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -1.48651, 1.2669 )
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="sense" type="Area2D" parent="."]
visible = false
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="sense"]
position = Vector2( -0.297302, 0 )
shape = SubResource( 6 )

[node name="sense3" type="Area2D" parent="."]
collision_layer = 12
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="sense3"]
position = Vector2( -0.176788, 32.5269 )
shape = SubResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="sense3"]
position = Vector2( -1.41422, 9.01562 )
shape = SubResource( 7 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="area_entered" from="test/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="test/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="sense" to="." method="_on_sense_body_entered"]
[connection signal="body_exited" from="sense" to="." method="_on_sense_body_exited"]
[connection signal="body_entered" from="sense3" to="." method="_on_sense3_body_entered"]
[connection signal="body_exited" from="sense3" to="." method="_on_sense3_body_exited"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
